tests/fixtures/invalid/divmod_none_bool.py
# Cannot call divmod() with None, Bool
x = divmod(None, True)
